@@ -1,4 +1,4 @@
-OBJECTS = display.o download.o rtorrent.o
+OBJECTS = http.o display.o download.o rtorrent.o
 CFLAGS = -Wall -O3 -g -I..
 LIBS = -L../torrent/.libs -ltorrent -lncurses -lcrypto
 
